@@ -37,6 +37,9 @@ If set, no status information is displayed.
 .TP
 .I -C <macs>
 Merges all those APs MAC (separated by a comma) into a virtual one.
+.TP
+.I -l <file>
+Write the key into a file.
 .PP
 .TP
 .B Static WEP cracking options:
